[package]
name = "bevy_extended_ui"
version = "1.0.0-beta.1"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]
description = "Create simply ui's with css and html for bevy."
license = "Apache-2.0"
repository = "https://github.com/exepta/bevy_extended_ui"
readme = "README.md"
keywords = ["bevy", "ui", "slider", "css", "html"]
categories = ["gui", "rendering"]

[lib]
name = "bevy_extended_ui"
path = "src/lib.rs"

[workspace]
members = ["crates/bevy_extended_ui_macros"]

[dependencies.bevy_extended_ui_macros]
path = "crates/bevy_extended_ui_macros"
version = "0.1.0"

# Bevy 0.17.0 main library
[dependencies.bevy]
version = "0.17.3"
default-features = false
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_ui_render",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "multi_threaded",
    "png",
    "jpeg",
    "gif",
    "ico",
    "webp",
    "bevy_mesh_picking_backend",
    "bevy_picking",
    "custom_cursor",
    "bevy_ui_picking_backend",
    "bevy_winit",
    "x11",
    "bevy_log",
]

# Html Converter
[dependencies.kuchiki]
version = "0.8.1"

# Css3 Converter
[dependencies.lightningcss]
version = "1.0.0-alpha.68"

[dependencies.once_cell]
version = "1.21.3"

[dependencies.regex]
version = "1.12.2"

[dependencies.inventory]
version = "0.3.21"
