[package]
name = "bevy_extended_ui"
version = "1.0.0-beta.1"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]
description = "Create simply ui's with css and html for bevy."
license = "Apache-2.0"
repository = "https://github.com/exepta/bevy_extended_ui"
readme = "README.md"
keywords = ["bevy", "ui", "slider", "css", "html"]
categories = ["gui", "rendering"]
exclude = [
    "examples/**",
    "assets/examples/**",
    "assets/images/**",
    "assets/lang/**",
]

[lib]
name = "bevy_extended_ui"
path = "src/lib.rs"

[features]
default = ["css-breakpoints", "fluent"]
css-breakpoints = []
wasm-breakpoints = ["dep:web-sys"]
wasm-default = ["wasm-breakpoints", "clipboard-wasm"]
fluent = ["dep:i18n", "dep:i18n-fluent", "dep:unic-langid"]
properties-lang = ["dep:i18n", "dep:i18n-properties"]
clipboard-wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]

############################################
#                  Crates                  #
############################################

[workspace]
members = ["crates/bevy_extended_ui_macros"]

[dependencies.bevy_extended_ui_macros]
path = "crates/bevy_extended_ui_macros"
version = "0.1.0"

############################################
#               Dependencies               #
############################################

# Bevy 0.18.0 main library
[dependencies.bevy]
version = "0.18.0"
default-features = false
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_ui_render",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "multi_threaded",
    "picking",
    "ui_picking",
    "png",
    "jpeg",
    "gif",
    "ico",
    "webp",
    "bevy_picking",
    "custom_cursor",
    "bevy_winit",
    "x11",
    "bevy_log",
]

# Html Converter
[dependencies.kuchiki]
version = "0.8.1"

# Css3 Converter
[dependencies.lightningcss]
version = "1.0.0-alpha.70"

[dependencies.once_cell]
version = "1.21.3"

[dependencies.regex]
version = "1.12.3"

[dependencies.inventory]
version = "0.3.21"

[dependencies.i18n]
package = "i18n-rizzen-yazston"
version = "0.10.1"
optional = true

[dependencies.i18n-fluent]
package = "fluent"
version = "0.17.0"
optional = true

[dependencies.unic-langid]
version = "0.9"
optional = true

[dependencies.i18n-properties]
package = "properties"
version = "0.1.1"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.92", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
web-sys = { version = "0.3.69", features = ["Navigator", "Clipboard", "Window"], optional = true }
