[package]
name = "bevy_extended_ui"
version = "1.0.0-beta.1"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]
description = "Create simply ui's with css and html for bevy."
license = "Apache-2.0"
repository = "https://github.com/exepta/bevy_extended_ui"
readme = "README.md"
keywords = ["bevy", "ui", "slider", "css", "html"]
categories = ["gui", "rendering"]
exclude = [
    "examples/**",
    "assets/examples/**",
    "assets/images/**",
    "assets/lang/**",
    "crates/local-examples/**",
    "crates/local-wasm-examples/**",
]

[lib]
name = "bevy_extended_ui"
path = "src/lib.rs"

[features]
default = ["css-breakpoints", "fluent", "providers", "svg", "extended-dialog"]
css-breakpoints = []
wasm-breakpoints = ["dep:web-sys"]
wasm-default = ["wasm-breakpoints", "clipboard-wasm", "svg"]
fluent = ["dep:i18n", "dep:i18n-fluent", "dep:unic-langid", "dep:libsqlite3-sys"]
properties-lang = ["dep:i18n", "dep:i18n-properties"]
clipboard-wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
providers = []
svg = ["dep:resvg"]
extended-dialog = ["dep:rfd"]

############################################
#                  Crates                  #
############################################

[workspace]
members = ["crates/bevy_extended_ui_macros"]

[dependencies.bevy_extended_ui_macros]
path = "crates/bevy_extended_ui_macros"
version = "0.1.0"

############################################
#               Dependencies               #
############################################

# Bevy 0.18.0 main library
[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_ui_render",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "multi_threaded",
    "picking",
    "ui_picking",
    "png",
    "jpeg",
    "gif",
    "ico",
    "webp",
    "bevy_picking",
    "custom_cursor",
    "bevy_winit",
    "x11",
    "bevy_log",
]

# Html Converter
[dependencies.kuchiki]
version = "0.8.1"

# Css3 Converter
[dependencies.lightningcss]
version = "1.0.0-alpha.71"

[dependencies.once_cell]
version = "1.21.3"

[dependencies.regex]
version = "1.12.3"

[dependencies.base64]
version = "0.22.1"

[dependencies.inventory]
version = "0.3.23"

[dependencies.resvg]
version = "0.47.0"
optional = true

[dependencies.i18n]
package = "i18n-rizzen-yazston"
version = "0.10.1"
optional = true

[dependencies.i18n-fluent]
package = "fluent"
version = "0.17.0"
optional = true

[dependencies.unic-langid]
version = "0.9"
optional = true

[dependencies.i18n-properties]
package = "properties"
version = "0.1.1"
optional = true

[dependencies.libsqlite3-sys]
version = "0.30.1"
features = ["bundled"]
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.5.0"
rfd = { version = "0.15.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.92", optional = true }
wasm-bindgen-futures = { version = "0.4.64", optional = true }
web-sys = { version = "0.3.69", features = ["Navigator", "Clipboard", "Window", "Document", "Element", "HtmlElement", "HtmlInputElement", "Event", "File", "FileList", "FileReader", "Blob", "Url"], optional = true }
js-sys = "0.3.69"
# `lightningcss -> ahash` pulls `getrandom` on wasm; opt into JS backend for wasm32-unknown-unknown.
getrandom = { version = "0.3.4", features = ["wasm_js"] }
