[package]
name = "bevy_extended_ui_local_examples"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[features]
default = []
extended-framework = [
    "bevy_extended_ui/extended-dialog",
    "bevy_extended_ui/extended-framework",
]

[dependencies.bevy]
version = "0.19.0"
default-features = false
features = ["ui", "png", "jpeg", "gif", "ico", "webp", "keyboard", "mouse", "touch"]

[dependencies]
bevy_extended_ui = { path = "../..", features = ["svg"] }
bevy_extended_ui_macros = { path = "../bevy_extended_ui_macros" }
serde = { version = "1", features = ["derive"] }
